[package]
name = "ubiart_toolkit"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Library and CLI tools for working with UbiArt Engine file formats"
keywords = ["ubiart", "ipk"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
arbitrary = { workspace = true, optional = true }
bitflags = { workspace = true }
clap = { workspace = true }
dotstar_toolkit_utils = { path = "../dotstar_toolkit_utils" }
flate2 = { workspace = true }
gc_adpcm = { path = "../gc_adpcm" }
hound = { workspace = true }
image = { workspace = true }
memmap2 = { workspace = true }
nohash-hasher = { workspace = true }
opus = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
stable_deref_trait = { workspace = true }
tegra_swizzle = { workspace = true }
texpresso = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wiiu_swizzle = { workspace = true }
yoke = { workspace = true }
zopfli = { workspace = true, optional = true }

[dev-dependencies]
datatest-stable = { workspace = true }

[features]
default = []
fuzz = ["arbitrary"]
zopfli = ["dep:zopfli"]
arbitrary = ["dep:arbitrary"]
full_json_types = []

[lints]
workspace = true

[[test]]
name = "act"
harness = false

[[test]]
name = "alias8"
harness = false

[[test]]
name = "dtape"
harness = false

[[test]]
name = "frt"
harness = false

[[test]]
name = "gf"
harness = false

[[test]]
name = "isc"
harness = false

[[test]]
name = "isg"
harness = false

[[test]]
name = "json"
harness = false

[[test]]
name = "ktape"
harness = false

[[test]]
name = "loc8"
harness = false

[[test]]
name = "msh"
harness = false

[[test]]
name = "msm"
harness = false

[[test]]
name = "png"
harness = false

[[test]]
name = "sgs"
harness = false

[[test]]
name = "sgscontainer"
harness = false

[[test]]
name = "stape"
harness = false

[[test]]
name = "tape"
harness = false

[[test]]
name = "tfn"
harness = false

[[test]]
name = "tga"
harness = false

[[test]]
name = "tpl"
harness = false

[[test]]
name = "wav"
harness = false
