[package]
name = "ubiart_toolkit"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Library and CLI tools for working with UbiArt Engine file formats"
keywords = ["ubiart", "ipk"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
arbitrary = { workspace = true, optional = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
clap = { workspace = true }
dotstar_toolkit_utils.workspace = true
flate2 = { workspace = true }
gc_adpcm.workspace = true
gtx.workspace = true
hound = { workspace = true }
image = { workspace = true }
image_dds = { workspace = true }
memmap2 = { workspace = true }
nohash-hasher = { workspace = true }
nx_opus = { workspace = true }
ogg = { workspace = true }
opus = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
simd-json = { workspace = true }
stable_deref_trait = { workspace = true }
tegra_swizzle = { workspace = true }
texpresso = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber.workspace = true
ubiart_toolkit_isc_types.workspace = true
ubiart_toolkit_json_types.workspace = true
ubiart_toolkit_shared_types.workspace = true
wiiu_swizzle = { workspace = true }
xtx = { path = "../xtx" }
yoke = { workspace = true }
zopfli = { workspace = true, optional = true }
hipstr.workspace = true
ownable.workspace = true
simdutf8.workspace = true
derive_builder = "0.20.2"
superstruct = "0.8.0"

[dev-dependencies]
datatest-stable = { workspace = true }

[features]
default = []
fuzz = ["arbitrary"]
zopfli = ["dep:zopfli"]
arbitrary = ["dep:arbitrary"]
full_json_types = ["ubiart_toolkit_json_types/full_json_types"]

[lints]
workspace = true

[[test]]
name = "act"
harness = false

[[test]]
name = "alias8"
harness = false

[[test]]
name = "dlcdescriptor"
harness = false

[[test]]
name = "dtape"
harness = false

[[test]]
name = "frt"
harness = false

[[test]]
name = "gf"
harness = false

[[test]]
name = "isc"
harness = false

[[test]]
name = "isg"
harness = false

[[test]]
name = "json"
harness = false

[[test]]
name = "ktape"
harness = false

[[test]]
name = "loc8"
harness = false

[[test]]
name = "msh"
harness = false

[[test]]
name = "msm"
harness = false

[[test]]
name = "png"
harness = false

[[test]]
name = "sgs"
harness = false

[[test]]
name = "sgscontainer"
harness = false

[[test]]
name = "stape"
harness = false

[[test]]
name = "tape"
harness = false

[[test]]
name = "tfn"
harness = false

[[test]]
name = "tga"
harness = false

[[test]]
name = "tpl"
harness = false

[[test]]
name = "wav"
harness = false
