[package]
name = "ubiart_toolkit_isc_types"
version = "0.1.0"
edition = "2021"

[dependencies]
dotstar_toolkit_utils = { path = "../dotstar_toolkit_utils" }
quick-xml.workspace = true
serde.workspace = true
ubiart_toolkit_shared_types = { path = "../ubiart_toolkit_shared_types" }

[lints]
workspace = true
