[package]
name = "ubiart_toolkit_shared_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Types for ubiart_toolkit"
keywords = ["ubiart", "ipk"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
dotstar_toolkit_utils = { workspace = true }
ownable = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simdutf8 = { workspace = true }
thiserror = { workspace = true }
test_eq = { workspace = true }

[lints]
workspace = true
