[package]
name = "wii_toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Library and CLI tools for working with Nintendo Wii file formats"
keywords = ["wii", "wad"]
categories = ["command-line-utilities", "parser-implementations"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true, features = ["std", "backtrace"] }
byteorder = { workspace = true, features = ["std"] }
cbc = { workspace = true, features = ["std", "block-padding"] }
cipher = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["std", "help", "usage", "suggestions", "derive"] }
dotstar_toolkit_utils = { version = "0.1.0", path = "../dotstar_toolkit_utils" }
memmap2 = { workspace = true, features = ["stable_deref_trait"] }
sha1 = { workspace = true, features = ["std"] }
stable_deref_trait = { workspace = true, features = ["std"] }
ux = { workspace = true, features = ["std"] }
yoke = { workspace = true, features = ["alloc", "derive"] }

[lints]
workspace = true
