[package]
name = "wii_toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Library and CLI tools for working with Nintendo Wii file formats"
keywords = ["wii", "wad"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
clap = { workspace = true }
dotstar_toolkit_utils = { path = "../dotstar_toolkit_utils" }
memmap2 = { workspace = true }
sha1 = { workspace = true }
stable_deref_trait = { workspace = true }
ux = { workspace = true }
yoke = { workspace = true }

[lints]
workspace = true
