[package]
name = "xtx"
version = "0.1.0"
edition = "2021"
description = "Texture decoder for the Nintendo Switch XTX format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kriskras99/ferris_dancing"
readme = "README.md"
keywords = ["xtx", "switch", "texture", "decoder", "encoder"]
categories = ["encoding", "multimedia::encoding", "parser-implementations"]

[dependencies]
dotstar_toolkit_utils.workspace = true
image.workspace = true
tegra_swizzle.workspace = true
texpresso.workspace = true
thiserror.workspace = true

[lints]
workspace = true
